--- a/projects/elsomr/dominion/Makefile
+++ b/projects/elsomr/dominion/Makefile
@@ -26,11 +26,11 @@ interface.o: interface.h interface.c
 runtests: testBaronCard testMinionCard
 	./testBaronCard &> unittestresult.out
 	gcov -b -f dominion.c >> unittestresult.out
-	cat dominion.c.gcov >> unittestresult.out
+	#cat dominion.c.gcov >> unittestresult.out
 	
 	./testMinionCard &> unittestresult.out
 	gcov -b -f dominion.c >> unittestresult.out
-	cat dominion.c.gcov >> unittestresult.out
+	#cat dominion.c.gcov >> unittestresult.out
 
 
 player: player.c interface.o
