--- a/projects/FinalProject-Bugs/dominion/Makefile
+++ b/projects/FinalProject-Bugs/dominion/Makefile
@@ -8,7 +8,7 @@ dominion.o: dominion.h dominion.c rngs.o
 
 playdom: dominion.o playdom.c
 	gcc -o playdom playdom.c -g dominion.o rngs.o $(CFLAGS)
-#To run playdom you need to entere: ./playdom <any integer number> like ./playdom 10*/
+#To run playdom you need to enter: ./playdom <any integer number> like ./playdom 10*/
 
 testDrawCard: testDrawCard.c dominion.o rngs.o
 	gcc  -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
@@ -25,7 +25,27 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player 
+bug1: bug1_unit.c dominion.o
+	gcc -o bug1 bug1_unit.c dominion.o rngs.o -g $(CFLAGS)
+
+bug2: bug2_unit.c dominion.o
+	gcc -o bug2 bug2_unit.c dominion.o rngs.o -g $(CFLAGS)
+
+bug3: bug3_unit.c dominion.o
+	gcc -o bug3 bug3_unit.c dominion.o rngs.o -g $(CFLAGS)
+
+bug4: bug4_unit.c dominion.o
+	gcc -o bug4 bug4_unit.c dominion.o rngs.o -g $(CFLAGS)
+
+unittestresults: bug1 bug2 bug3 bug4
+	bug1 &> unittestresults.out
+	bug2 >> unittestresults.out
+	bug3 >> unittestresults.out
+	bug4 >> unittestresults.out
+	gcov dominion.c -b -f >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+all: playdom player bug1 bug2 bug3 bug4
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe bug1.exe bug1 bug2.exe bug2 bug3.exe bug3 bug4.exe bug4 unittestresults.out
