fixed syntax error

--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -23,9 +23,9 @@ unitTest10: unitTest10.c dominion.o rngs.o
 
 runtests: unitTest9 unitTest10
 	./unitTest9 &> testresults.out
-	gcov -b -f dominion.c >> testresults.out
+	#gcov -b -f dominion.c >> testresults.out
 	
-	./unitTest10 &> testresults.out
+	./unitTest10 >> testresults.out
 	gcov -b -f dominion.c >> testresults.out
 
 
